--- a/package.json
+++ b/package.json
@@ -2,7 +2,23 @@
   "name": "minierpeng-ui",
   "private": true,
   "scripts": {
-    "hello": "echo 'hello world'"
+    "clean:type": "rimraf ./dist",
+    "type:node": "tsc -p tsconfig.node.json --noEmit --composite false",
+    "type:src": "pnpm run clean:type && vue-tsc -p tsconfig.src.json --composite false --declaration --emitDeclarationOnly",
+    "mv-type": "tsx ./scripts/dts-mv.ts",
+    "build:ui": "pnpm run type:src && pnpm --filter ./packages/** run build && pnpm run mv-type"
   },
-  "devDependencies": {}
+  "dependencies": {
+    "vue": "^3.3.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.5",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "rimraf": "^5.0.1",
+    "sass": "^1.64.2",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.8",
+    "vue-tsc": "^1.8.8"
+  }
 }
