--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@minierpengui/button",
+  "name": "@minierpengui/shared",
   "version": "0.0.0",
   "description": "",
   "keywords": [
@@ -21,13 +21,13 @@
     "build": "vite build",
     "test": "echo test"
   },
-  "main": "./dist/minierpengui-button.umd.js",
-  "module": "./dist/minierpengui-button.mjs",
+  "main": "./dist/minierpengui-shared.umd.js",
+  "module": "./dist/minierpengui-shared.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/minierpengui-button.umd.js",
-      "module": "./dist/minierpengui-button.mjs",
+      "require": "./dist/minierpengui-shared.umd.js",
+      "module": "./dist/minierpengui-shared.mjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -39,6 +39,7 @@
     "vue": ">=3.0.0"
   },
   "dependencies": {
-    "@minierpengui/shared": "workspace:^"
+    "@types/lodash": "^4.14.196",
+    "lodash": "^4.17.21"
   }
 }
