--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@minierpengui/button",
+  "name": "@minierpengui/ui",
   "version": "0.0.0",
   "description": "",
   "keywords": [
@@ -21,13 +21,13 @@
     "build": "vite build",
     "test": "echo test"
   },
-  "main": "./dist/minierpengui-button.umd.js",
-  "module": "./dist/minierpengui-button.mjs",
+  "main": "./dist/minierpengui-ui.umd.js",
+  "module": "./dist/minierpengui-ui.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/minierpengui-button.umd.js",
-      "module": "./dist/minierpengui-button.mjs",
+      "require": "./dist/minierpengui-ui.umd.js",
+      "module": "./dist/minierpengui-ui.mjs",
       "types": "./dist/index.d.ts"
     }
   },
@@ -39,6 +39,8 @@
     "vue": ">=3.0.0"
   },
   "dependencies": {
+    "@minierpengui/button": "workspace:^",
+    "@minierpengui/input": "workspace:^",
     "@minierpengui/shared": "workspace:^"
   }
 }
