--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "minierpeng-ui",
   "private": true,
   "scripts": {
+    "lint-staged": "lint-staged",
+    "prepare": "husky install",
+    "lint:style": "stylelint --fix ./**/*.{css,scss,vue,html}",
+    "lint:script": "eslint --ext .js,.jsx,.ts,.tsx,.vue --fix ./",
     "clean:type": "rimraf ./dist",
     "type:node": "tsc -p tsconfig.node.json --noEmit --composite false",
     "type:src": "pnpm run clean:type && vue-tsc -p tsconfig.src.json --composite false --declaration --emitDeclarationOnly",
@@ -12,13 +16,32 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@types/node": "^20.4.5",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-vue": "^4.2.3",
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-define-config": "^1.22.0",
+    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-vue": "^9.16.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "sass": "^1.64.2",
+    "stylelint": "^15.10.2",
+    "stylelint-config-recess-order": "^4.3.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard-scss": "^10.0.0",
+    "stylelint-stylistic": "^0.4.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
+    "vue-eslint-parser": "^9.3.1",
     "vue-tsc": "^1.8.8"
   }
 }
