--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "clean:type": "rimraf ./dist",
     "type:node": "tsc -p tsconfig.node.json --noEmit --composite false",
     "type:src": "pnpm run clean:type && vue-tsc -p tsconfig.src.json --composite false --declaration --emitDeclarationOnly",
-    "mv-type": "tsx ./scripts/dts-mv.ts",
-    "build:ui": "pnpm run type:src && pnpm --filter ./packages/** run build && pnpm run mv-type"
+    "build:ui": "pnpm run type:src && pnpm --filter ./packages/** run build"
   },
   "dependencies": {
     "vue": "^3.3.4"
