--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,12 +23,12 @@
   },
   "main": "./dist/minierpengui-shared.umd.js",
   "module": "./dist/minierpengui-shared.mjs",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/src/index.d.ts",
   "exports": {
     ".": {
       "require": "./dist/minierpengui-shared.umd.js",
-      "module": "./dist/minierpengui-shared.mjs",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/minierpengui-shared.mjs",
+      "types": "./dist/src/index.d.ts"
     }
   },
   "files": [
