--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,17 +18,20 @@
     "url": "https://github.com/miniliupeng/minierpeng-ui/issues"
   },
   "scripts": {
-    "build": "vite build",
+    "build:package": "vite build --mode package",
+    "build:full": "vite build --mode full",
+    "build:full-min": "vite build --mode full-min",
+    "build": "pnpm run build:package && pnpm run build:full && pnpm run build:full-min",
     "test": "echo test"
   },
   "main": "./dist/minierpengui-ui.umd.js",
   "module": "./dist/minierpengui-ui.mjs",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/src/index.d.ts",
   "exports": {
     ".": {
       "require": "./dist/minierpengui-ui.umd.js",
-      "module": "./dist/minierpengui-ui.mjs",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/minierpengui-ui.mjs",
+      "types": "./dist/src/index.d.ts"
     }
   },
   "files": [
